Nicer config.properties with more options More logging in startup files Removed shutdown port